Cambios en index y style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Documento HTML sencillo</title>
   <!-- estilos movidos a styles.css -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -53,23 +53,6 @@
     </footer>
   </div>
 
-  <script>
-    const themeBtn = document.getElementById('themeBtn');
-    let dark = false;
-    themeBtn.addEventListener('click', () => {
-      dark = !dark;
-      if(dark){
-        document.documentElement.style.setProperty('--bg','#0b1220');
-        document.documentElement.style.setProperty('--card','#071028');
-        document.documentElement.style.setProperty('--accent','#06b6d4');
-        document.documentElement.style.setProperty('--text','#f8fafc');
-      } else {
-        document.documentElement.style.setProperty('--bg','#f7f7f9');
-        document.documentElement.style.setProperty('--card','#ffffff');
-        document.documentElement.style.setProperty('--accent','#4f46e5');
-        document.documentElement.style.setProperty('--text','#111827');
-      }
-    });
-  </script>
+ 
 </body>
 </html>
